--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                         <a href="https://drive.google.com/drive/u/2/folders/1QoPtx7gqDppqNYp5mPkyFX_XB9jBCoEf" class="btn btn-primary">DESCARGA DE FOLLETO</a>
                                     </div>
                                     <div class="home_btn">
-                                        <a href="https://share.hsforms.com/1At83x4KlT7iTFJdLFsRCNAcoyj6" class="btn btn-primary">******INSCRIPCIONES******</a>
+                                        <a href="https://share.hsforms.com/1At83x4KlT7iTFJdLFsRCNAcoyj6" class="btn btn-primary">******INSCRIPCIONES*****</a>
                                     </div>
                                 </div>
                             </div>
