--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                         <a href="https://drive.google.com/drive/u/2/folders/1QoPtx7gqDppqNYp5mPkyFX_XB9jBCoEf" class="btn btn-primary">DESCARGA DE FOLLETO</a>
                                     </div>
                                     <div class="home_btn">
-                                        <a href="https://share.hsforms.com/1At83x4KlT7iTFJdLFsRCNAcoyj6" class="btn btn-primary">******INSCRIPCIONES*****</a>
+                                        <a href="https://share.hsforms.com/1At83x4KlT7iTFJdLFsRCNAcoyj6" class="btn btn-primary">*****INSCRIPCIONES*****</a>
                                     </div>
                                 </div>
                             </div>
@@ -967,7 +967,7 @@
 
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="copyright_text">
-                                            <p class=" wow fadeInRight" data-wow-duration="1s">Hecho con <i class="fa fa-heart"></i> por <a href="https://bootstrapthemes.co">AleXito</a>2022. All Rights Reserved</p>
+                                            <p class=" wow fadeInRight" data-wow-duration="1s">Hecho con <i class="<i class="fa-solid fa-face-smile-horns"></i>"></i> por <a href="https://bootstrapthemes.co">AleXito</a>2022. All Rights Reserved</p>
                                         </div>
                                     </div>
 
