--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
 
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="copyright_text">
-                                            <p class=" wow fadeInRight" data-wow-duration="1s">Hecho con <i class="<i class="fa-solid fa-face-smile-horns"></i>"></i> por <a href="https://bootstrapthemes.co">AleXito</a>2022. All Rights Reserved</p>
+                                            <p class=" wow fadeInRight" data-wow-duration="1s">*<i class="<i class="fa-solid fa-face-angry-horns"></i> por <a href="https://bootstrapthemes.co">AleXito</a>2022. All Rights Reserved</p>
                                         </div>
                                     </div>
 
