--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
 
         <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
+    
+    <section id="social" class="social">
+        <div class="container">
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="social-contact">
+                            <a href="#"><i class="fa fa-phone"></i>0980909043</a>
+                            <a href="#"><i class="fa fa-envelope"></i>glen_robayo@hotmail.com</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- /container -->       
+    </section>
+    
     <body data-spy="scroll" data-target=".navbar" data-offset="200">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
