--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
+        <meta name="google-site-verification" content="7OMH8ob_gVoFEWsWdhOeskTFzVovuozc_WREKQWAPwU" />
         <meta name="google-site-verification" content="8u_LkVXj6nMv3Q786Nx2puTA7dLNll-N4XtRgu_7UL0" />
        <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HGF970253Q"></script>
