--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     </div>
                     <div class="col-md-6">
                         <div class="social-contact">
-                            <a href="#"><i class="fa fa-phone"></i>0980909043</a>
-                            <a href="#"><i class="fa fa-envelope"></i>glen_robayo@hotmail.com</a>
+                             <font color="#556B2" size="3" face="Times"><i class="fa fa-phone"></i> 0980909043</font>
+                             <h6><a href="#"><i class="fa fa-envelope"></i><font color="#556B2" size="3" face="Times"> glen_robayo@hotmail.com</font></a></h6>
                         </div>
                     </div>
                 </div>
@@ -94,14 +94,15 @@
                                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                                             <ul class="nav navbar-nav navbar-right">
-                                                <li><a href="#home"style="color:rgb(255, 145, 0);"/>INICIO</a></li>
-                                                <li><a href="#service"style="color:rgb(255, 145, 0);"/">CURSOS</a></li>
-                                                <li><a href="#about"style="color:rgb(255, 145, 0);"/>ACERCA DE</a></li>
-                                                <!--<li><a href="#portfolio">WORKS</a></li>-->
-                                                <li><a href="#Galeria"style="color:rgb(255, 145, 0);"/>Talleres</a></li>
-                                                <li><a href="#testimonial"style="color:rgb(255, 145, 0);"/>TESTIMONIOS</a></li>
-                                                <li><a href="#contact"style="color:rgb(255, 145, 0);"/>CONTACTOS</a></li>
-
+                                                <li><a href="#home"><font color="#556B2F" size="4" face="Times">INICIO</font></a></li>
+                                                <li><a href="#service"><font color="#556B2F" size="4" face="Times">CURSOS</font></a></li>
+                                                <li><a href="#about"><font color="#556B2F" size="4" face="Times">ACERCA DE</font></a></li>
+                                                <!--<li><a href="#portfolio"><font color="#556B2F" size="4" face="Times">WORKS</a></li>-->
+                                                <li><a href="#Galeria"><font color="#556B2F" size="4" face="Times">Talleres</font></a></li>
+                                                <li><a href="#testimonial"><font color="#556B2F" size="4" face="Times">TESTIMONIOS</font></a></li>
+                                                <li><a href="#contact"><font color="#556B2F" size="4" face="Times">CONTACTOS</font></a></li>
+                                                <li><a href="https://www.facebook.com/profile.php?id=100078435741263"><i class="fa fa-facebook"style="font-size:20px;color:Blue"></i></a>
+                                                <li><a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!"><i class="fa fa-whatsapp" style="font-size:20px;color:green" aria-hidden="true"></i></a>
 
                                                 <!--<li>
                                                     <a href="#"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -1052,7 +1053,8 @@
 
                                     <div class="col-sm-6 col-xs-12">
                                         <div class="flowus">
-                                            <a href="https://www.facebook.com/profile.php?id=100078435741263"><i class="fa fa-facebook"></i></a>
+                                             <a href="https://www.facebook.com/profile.php?id=100078435741263"><i class="fa fa-facebook"style="color:Blue"></i></a>
+                                            <a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!"><i class="fa fa-whatsapp" style="color:green" aria-hidden="true"></i></a>
                                           <!-- <a href=""><i class="fa fa-twitter"></i></a>
                                             <a href=""><i class="fa fa-google-plus"></i></a>
                                             <a href=""><i class="fa fa-instagram"></i></a>
