--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                             
                                             <div class="home_btn">
                                                 <h1><span style="color:rgb(255, 145, 0)">TT</span><span style="color:red">D</span><span style="color:rgb(252, 250, 248)">C<span></span></h1>
-                                                <a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
+                                                <!--<a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>-->
                                             </div>
                                             
                                             <div class="home_btn">
@@ -163,7 +163,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <i class="fa fa-star fa-2x fa.lg" style="color:rgb(255, 145, 0);"/></i>
                                             <div class="home_btn">
-                                                <a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
+                                               <!-- <a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>-->
                                             </div>
                                             <h2><span style="color:rgb(253, 255, 253)">LLEVANDO TUS COMPETENCIAS A UN NUEVO NIVEL</span></h2>
                                             <div class="home_btn">
@@ -176,7 +176,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             <i class="fa fa-star fa-2x fa.lg" style="color:rgb(255, 145, 0);"/></i>
                                             <div class="home_btn">
-                                                <a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>
+                                              <!--  <a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>-->
                                             </div>
                                             <h2><span style="color:rgb(253, 255, 253)">GENERANDO NUEVAS OPORTUNIDADES COMERCIALES</span></h2>
                                             <div class="home_btn">
