--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     </div>
                     <div class="col-md-6">
                         <div class="social-contact">
-                             <font color="#556B2" size="3" face="Times"><i class="fa fa-phone"></i> 0980909043</font>
-                             <h6><a href="#"><i class="fa fa-envelope"></i><font color="#556B2" size="3" face="Times"> glen_robayo@hotmail.com</font></a></h6>
+                             <font color="#FF8C00" size="3" face="Times"><i class="fa fa-phone"></i> 0980909043</font>
+                             <h6><a href="#FF8C00"><i class="fa fa-envelope"></i><font color="#FF8C00" size="3" face="Times"> glen_robayo@hotmail.com</font></a></h6>
                         </div>
                     </div>
                 </div>
