--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
                                         </ul>
 
                                         <!-- Tab panes -->
-                                        <div class="tab-content">
+                                                                  <div class="tab-content">
                                             <div role="tabpanel" class="tab-pane active" id="webdesign">
-                                         <div class="single_service_tab">
+                                                <div class="single_service_tab">
                                                     <div class="row">
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_content">
@@ -249,7 +249,7 @@
                                                                 <div class="head_title">
                                                                     <h3>CALIDAD - PRÓXIMAMENTE</h3>
                                                                     <div class="separator"></div>
-                                                                
+                                                                </div>
                                                                 <p><h6><b> Empresa y Calidad</b></h6></p>
                                                                 <p><h6> •  Conceptos e ideas relacionadas a la Calidad </h6></p>
                                                                 <p><h6> • La Brecha del Servicio</h6></p>
@@ -261,7 +261,6 @@
                                                                 <a href="" class="btn btn-primary">Más información</a>
                                                             </div>
                                                         </div>
-                                                    </div>
 
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_img">
@@ -272,7 +271,31 @@
                                                 </div>
                                             </div>
                                             <div role="tabpanel" class="tab-pane" id="graphicdesign">
-                                                           <div class="single_service_tab">
+                                                <div class="single_service_tab">
+                                                    <div class="row">
+                                                        <div class="col-sm-6">
+                                                            <div class="single_tab_content">
+                                                                <div class="head_title">
+                                                                    <h3>FINANZAS- PRÓXIMAMENTE</h3>
+                                                                    <div class="separator"></div>
+                                                                </div>
+                                                                <p><h6><b></b>PRÓXIMAMENTE</b></h6></p>
+                                                                <a href="" class="btn btn-primary">Más información</a>
+                                                         
+                                                            </div>
+
+                                                        </div>
+
+                                                        <div class="col-sm-6">
+                                                            <div class="single_tab_img">
+                                                                <img src="assets/images/FINANZAS.jpg" alt="" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div role="tabpanel" class="tab-pane" id="gamedesign">
+                                          <div class="single_service_tab">
                                                     <div class="row">
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_content">
@@ -298,8 +321,10 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
 
+
+
+                                            </div>
                                         </div>
 
 
