--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
                                     <div class="service_tabe">
                                         <!-- Nav tabs -->
                                         <ul class="service_tabe_menu nav nav-tabs" role="tablist">
-                                            <li role="presentation" class="active"><a href="#webdesign" aria-controls="webdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i><br/>GESTIÓN DE VENTAS- PRÓXIMAMENTE</a></li>
-                                            <li role="presentation"><a href="#appdesign" aria-controls="appdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i><br/>CALIDAD - PRÓXIMAMENTE</a></li>
-                                            <li role="presentation"><a href="#graphicdesign" aria-controls="graphicdesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i> <br/>FINANZAS- PRÓXIMAMENTE</a></li>
-                                            <li role="presentation"><a href="#gamedesign" aria-controls="gamedesign" role="tab" data-toggle="tab"><i class="fa fa-map-marker"></i><br/>MARKETING DIGITAL</a></li>
+                                            <li role="presentation" class="active"><a href="#webdesign" aria-controls="webdesign" role="tab" data-toggle="tab"><i class="fa fa-line-chart" aria-hidden="true"></i><br/>GESTIÓN DE VENTAS- PRÓXIMAMENTE</a></li>
+                                            <li role="presentation"><a href="#appdesign" aria-controls="appdesign" role="tab" data-toggle="tab"><i class="fa fa-pie-chart" aria-hidden="true"></i><br/>CALIDAD - PRÓXIMAMENTE</a></li>
+                                            <li role="presentation"><a href="#graphicdesign" aria-controls="graphicdesign" role="tab" data-toggle="tab"><i class="fa fa-bar-chart" aria-hidden="true"></i> <br/>FINANZAS- PRÓXIMAMENTE</a></li>
+                                            <li role="presentation"><a href="#gamedesign" aria-controls="gamedesign" role="tab" data-toggle="tab"><i class="fa fa-check-square" aria-hidden="true"></i><br/>MARKETING DIGITAL</a></li>
                                         </ul>
 
                                         <!-- Tab panes -->
