--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                         <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                             
                                             <div class="home_btn">
-                                               <h2><font color="#FFFFFF" size="7" face="Brush Script MT">T T </font><font color="#FFA500" size="7" face="Brush Script MT"> D</font><font color="#FF0000" size="7" face="Brush Script MT"> C</font></h2>
+                                               <h2><font color="#FFA500" size="8" face="Lucida Console">T</font><font color="#FF0000" size="8" face="Lucida Console">T</font><font color="#FFA500" size="8" face="Lucida Console">D</font><font color="#FF0000" size="8" face="Lucida Console">C</font></h2>
                                                 <!--<a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!" class="btn btn-primary">Envíanos un mensaje de WhatsApp</a>-->
                                             </div>
                                             
