--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                                                   <!--</p>-->
 
                                                                 <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Más información</a>
-                                                                <a href="https://share.hsforms.com/1-dgDGX4GSJCr58Rod7Ob5Acoyj6" class="btn btn-primary">Encuesta</a>
+                                                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCU3YnAyVyH-qUPMPOEdE7xHqzLfb-wiv19a5mIDbVNP2bFQ/viewform?embedded=true" class="btn btn-primary">Encuesta</a>
                                                             </div>
                                                         </div>
 
