--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                                 <li><a href="#testimonial"><font color="#FF8C00" size="4" face="Times">TESTIMONIOS</font></a></li>
                                                 <li><a href="#contact"><font color="#FF8C00" size="4" face="Times">CONTACTOS</font></a></li>
                                                  <li><a href="https://api.whatsapp.com/send?phone=5930980909043&text=Hola, Nececito mas informacion!"><i class="fa fa-whatsapp" style="font-size:20px;color:green" aria-hidden="true"></i></a>
-                                                <li><a href="https://www.facebook.com/profile.php?id=100078435741263"><i class="fa fa-facebook"style="font-size:20px;color:Blue"></i></a>
+                                                <li><a href="https://www.facebook.com/profile.php?id=100078435741263"><i class="fa fa-facebook"style="font-size:40px;color:Blue"></i></a>
                                                
                                                 <!--<li>
                                                     <a href="#"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -205,10 +205,10 @@
                                     <div class="service_tabe">
                                         <!-- Nav tabs -->
                                         <ul class="service_tabe_menu nav nav-tabs" role="tablist">
-                                            <li role="presentation" class="active"><a href="#webdesign" aria-controls="webdesign" role="tab" data-toggle="tab"><i class="fa fa-line-chart" aria-hidden="true"></i><br/>GESTIÓN DE VENTAS- PRÓXIMAMENTE</a></li>
-                                            <li role="presentation"><a href="#appdesign" aria-controls="appdesign" role="tab" data-toggle="tab"><i class="fa fa-pie-chart" aria-hidden="true"></i><br/>CALIDAD - PRÓXIMAMENTE</a></li>
-                                            <li role="presentation"><a href="#graphicdesign" aria-controls="graphicdesign" role="tab" data-toggle="tab"><i class="fa fa-bar-chart" aria-hidden="true"></i> <br/>FINANZAS- PRÓXIMAMENTE</a></li>
-                                            <li role="presentation"><a href="#gamedesign" aria-controls="gamedesign" role="tab" data-toggle="tab"><i class="fa fa-check-square" aria-hidden="true"></i><br/>MARKETING DIGITAL</a></li>
+                                            <li role="presentation" class="active"><a href="#webdesign" aria-controls="webdesign" role="tab" data-toggle="tab"><i class="fa fa-line-chart" aria-hidden="true"></i><br/>GESTIÓN DE VENTAS- JUNIO/2022</a></li>
+                                            <li role="presentation"><a href="#appdesign" aria-controls="appdesign" role="tab" data-toggle="tab"><i class="fa fa-pie-chart" aria-hidden="true"></i><br/>CALIDAD - JULIO/2022</a></li>
+                                            <li role="presentation"><a href="#graphicdesign" aria-controls="graphicdesign" role="tab" data-toggle="tab"><i class="fa fa-bar-chart" aria-hidden="true"></i> <br/>FINANZAS- AGOSTO/2022</a></li>
+                                            <li role="presentation"><a href="#gamedesign" aria-controls="gamedesign" role="tab" data-toggle="tab"><i class="fa fa-check-square" aria-hidden="true"></i><br/>MARKETING DIGITAL- SEPTIEMBRE/2022</a></li>
                                         </ul>
 
                                         <!-- Tab panes -->
@@ -247,7 +247,7 @@
                                                         <div class="col-sm-6">
                                                             <div class="single_tab_content">
                                                                 <div class="head_title">
-                                                                    <h3>CALIDAD - JULI/2022</h3>
+                                                                    <h3>CALIDAD - JULIO/2022</h3>
                                                                     <div class="separator"></div>
                                                                 </div>
                                                                 <p><h6><b> Empresa y Calidad</b></h6></p>
